cabal-version:       >=1.10

name:                ParrotWatch
version:             0.1.0.0
-- synopsis:
-- description:
-- bug-reports:
-- license:
license-file:        LICENSE
author:              Blake Loring
maintainer:          blake@parsed.uk
-- copyright:
-- category:
build-type:          Simple
extra-source-files:  CHANGELOG.md

executable ParrotWatch
  main-is:             Main.hs
  other-modules:
  -- other-extensions:
  build-depends:       base, directory, filepath >= 1.4, time, fsnotify, transformers >= 0.5.6, process >= 1.6
  hs-source-dirs: src/
  default-language:    Haskell2010
